<resources>
    <string name="app_name">Numcode</string>
    <string name="numcode_button">NUMCODE WEB</string>
    <string name="numcode_profile">MY NUMCODE</string>
    <string name="numcode_profile_lowercase">My Numcode</string>
    <string name="numcode_share">SHARE MY NUMCODE</string>
    <string name="share_using">Share with: </string>
    <string name="ok">OK</string>
    <string name="register">Sign up</string>
    <string name="save_numcode">Save your Numcode</string>
    <string name="numcode_alert_body">You need to introduce your Numcode or sign up and get one.</string>
    <string name="share_body">Hi! Now you can see all my personal data always updated. You only have to click here: </string>

    <string name="settings">Settings</string>
    <string name="spanish">Spanish</string>
    <string name="english">English</string>
    <string name="french">French</string>
    <string name="language">Language</string>
    <string name="save">Save</string>

    <string name="loading">Loading…</string>
    <string name="download">Download Numcode: </string>
    <string name="contact_list_button">CONTACT LIST</string>

</resources>
