<?xml version="1.0" encoding="utf-8"?>
<RelativeLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    xmlns:fancy="http://schemas.android.com/apk/res-auto"
    android:id="@+id/activity_main"
    android:layout_width="match_parent"
    android:layout_height="match_parent"

    tools:context="jcollado.pw.numcode.MainActivity">

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_weight="0.7"
        android:background="@drawable/background"
        android:layout_alignParentTop="true"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_height="200dp"
        android:id="@+id/logoLayput">

    </RelativeLayout>

    <RelativeLayout
        android:layout_width="match_parent"
        android:layout_height="match_parent"
        android:layout_below="@+id/logoLayput"
        android:background="@color/background2"
        android:id="@+id/buttonLayout">

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/buttonWeb"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="@color/green_button"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/background2"
            fancy:fb_focusColor="@color/background2"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/numcode_button"
            fancy:fb_textColor="@color/green_button"
            android:layout_alignParentTop="false"
            android:layout_marginTop="30dp"
            android:layout_centerHorizontal="true">

        </mehdi.sakout.fancybuttons.FancyButton>

        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/buttonProfile"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="@color/green_button"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/green_button"
            fancy:fb_focusColor="@color/green_button"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/numcode_profile"
            fancy:fb_textColor="@color/background2"
            android:layout_below="@+id/buttonWeb"
            android:layout_centerHorizontal="true"
            android:layout_marginTop="20dp"/>
        <mehdi.sakout.fancybuttons.FancyButton
            android:id="@+id/buttonShare"
            android:layout_width="wrap_content"
            android:layout_height="wrap_content"
            android:paddingBottom="10dp"
            android:paddingLeft="20dp"
            android:paddingRight="20dp"
            android:paddingTop="10dp"
            fancy:fb_borderColor="@color/green_button"
            fancy:fb_borderWidth="1dp"
            fancy:fb_defaultColor="@color/green_button"
            fancy:fb_focusColor="@color/green_button"
            fancy:fb_iconPosition="left"
            fancy:fb_radius="30dp"
            fancy:fb_text="@string/numcode_share"
            fancy:fb_textColor="@color/background2"
            android:layout_below="@+id/buttonProfile"
            android:layout_marginTop="20dp"
            android:layout_centerHorizontal="true" />

    </RelativeLayout>

</RelativeLayout>
